# lightgbm-rust

./: .gitignore  Cargo.toml  README.md  benchmark.sh  data_gen.py  lightgbm_benchmark.py  plot.py  requirements.txt
data/: datasets.json  results.json
src/: main.rs
